--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#0f172a">
   <title>Neo Glide</title>
+  <link rel="icon" type="image/png" href="/arcadiaNeologo.jpeg?v=1" />
   <meta name="description"
     content="A unique hex-grid puzzle where each move ripples through neighboring runes. Made with React, Vite & Tailwind CSS." />
 </head>
